# Political_mood_scraper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cache_3ZJC3MSgmyQ.parquet  cache_XaajeefFONE.parquet  cache__4Pw7otGhuo.parquet  cache_kBYhvkePGH4.parquet  cache_kdoT5DJVzl0.parquet  cache_neYVUCDg100.json  cache_neYVUCDg100.parquet  cache_nvAGBqIVSmk.parquet  debug_test.db  docker-compose.yml  docker-entrypoint.sh  output.txt  politics_monitor.db  pyproject.toml  raw_comments.json  requirements.txt
data/: youtube_analytics.db
keys/youtubeAPI/: APIkey
linkedin_scraper/: DataTransform.py  DatabaseConnector.py  YouTubeLoader.py  export.py  logging_config.py  main.py  scraper.py
src/: DataTransform.py  DatabaseConnector.py  ModelManager.py  kaggle_connection.py  logging_config.py  main.py
src/analytics/: kaggle_connection.py  manual_analyze.py  manual_annotation_sample.py  model_analytics.py
