[project]
name = "linkedin_scraper"
version = "0.1.0"
description = "project for searching jobs"
authors = [
    {name = "BohdanDuma",email = "duma-bohdan@ukr.net"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[project.scripts]
scrape-jobs = "linkedin_scraper.main:main"