[project]
name = "linkedin_scraper"
version = "0.1.0"
description = "YouTube comment monitoring and analytics"
authors = [
    {name = "BohdanDuma", email = "duma-bohdan@ukr.net"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "requests>=2.34.2,<3.0.0",
    "sqlalchemy>=1.4,<2.2",
    "pandas>=1.5,<3.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.70.0",
    "tenacity>=8.0.1",
    "parsel>=1.8.0"
]

[project.optional-dependencies]
ml = [
    "transformers>=4.30.0",
    "torch>=2.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[project.scripts]
scrape-jobs = "linkedin_scraper.main:main"